@@ -8,3 +8,7 @@ Type=Application
 Icon=devhelp.png
 Categories=GNOME;Application;Development;
 StartupNotify=true
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=devhelp
+X-GNOME-Bugzilla-Component=General
+X-GNOME-Bugzilla-Version=@VERSION@
